--- a/TaskManager/src/main/webapp/TMAngular/src/app/app.component.css
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/app.component.css
@@ -9,3 +9,15 @@ table {
     text-align: left;
     padding: 8px;
   }
+
+  html,body 
+{
+   padding:0;
+   margin:0;
+   height:100%;
+   min-height:100%;
+ }
+ .part1 {width:50%; height:50%; float:left}
+ .part2 { width:50%; height:50%; float:left}
+ .part3 { width:50%; height:50%; float:left}    
+ .part4 { width:50%; height:50%; float:left}
