--- a/TaskManager/src/main/webapp/TMAngular/src/app/app.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/app.component.html
@@ -17,3 +17,13 @@
         </tr>
     </table>
 </div>
+
+
+
+
+<body>
+        <div class="part1"><app-epic></app-epic></div>
+        <div class="part2"><app-story></app-story> </div>
+        <div class="part3"></div>
+        <div class="part4"></div>
+      </body>
