--- a/TaskManager/src/main/webapp/TMAngular/src/app/commonview/epic/epic.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/commonview/epic/epic.component.html
@@ -1,3 +1,32 @@
-<p>
-  epic works!
-</p>
+<ngb-accordion #a="ngbAccordion" activeIds="custom-panel-1">
+  <ngb-panel id="custom-panel-1">
+    <ng-template ngbPanelHeader let-opened="opened">
+      <div class="d-flex align-items-center justify-content-between">
+        <h5 class="m-0">Epic</h5>
+        <button ngbPanelToggle class="btn btn-link p-0">&#9660;</button>
+      </div>
+    </ng-template>
+    <ng-template ngbPanelContent>
+        <table class="table table-striped" border="2">
+            <thead>
+            <tr>
+              <th scope="col">Name</th>
+              <th scope="col">Status</th>
+              <th scope="col">View</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let epic of epics">
+              <td>{{epic.epicName}}</td>
+              <td></td>
+              <td><ngb-accordion (panelChange)="beforeChange($event)">
+                <ngb-panel id="preventchange-1" title="View">
+                  <ng-template ngbPanelContent>
+                    {{epic.epicDescription}}
+                  </ng-template>
+                </ngb-panel>
+                </ngb-accordion></td>
+            </tr>
+            </tbody>
+          </table>
+    </ng-template>
