--- a/TaskManager/src/main/webapp/TMAngular/src/app/app.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--
 <div>
 
     <table>
@@ -27,3 +28,12 @@
         <div class="part3"></div>
         <div class="part4"></div>
       </body>
+-->
+<app-navbar></app-navbar>
+
+<!--<div class="container">
+    <app-employees></app-employees>
+</div>-->
+
+
+<router-outlet></router-outlet>
