Login with JWT authentication - Frontend
Login and registering user with JWT authentication.

--- a/TaskManager/src/main/webapp/TMAngular/src/app/app.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/app.component.html
@@ -1,29 +1,2 @@
-<div>
+<app-login></app-login>
 
-    <table>
-        <tr *ngIf="loggedOut">
-            Username: <input><br/>
-            Password: <input type="password"><br/>
-            <button (click)="loginUser()">Login</button>
-        </tr>
-        <tr  *ngIf="loggedIn">
-            <td>
-                <app-headerbasic></app-headerbasic>
-            </td>
-        </tr>
-        <tr  *ngIf="loggedIn">
-            <button (click)="logoutUser()">Logout</button>
-            <app-footerbasic></app-footerbasic>
-        </tr>
-    </table>
-</div>
-
-
-
-
-<body>
-        <div class="part1"><app-epic></app-epic></div>
-        <div class="part2"><app-story></app-story> </div>
-        <div class="part3"></div>
-        <div class="part4"></div>
-      </body>
