--- a/TaskManager/src/main/webapp/TMAngular/src/app/login/login.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/login/login.component.html
@@ -1,3 +1,58 @@
-<p>
-  login works!
-</p>
+<div *ngIf="isLoggedIn; else loggedOut">
+  <app-headerbasic></app-headerbasic>
+  <button class="btn btn-secondary" (click)="logout()"style="background-color:blue;margin-left:auto;margin-right:auto;display:block;margin-top:2%;margin-bottom:0%;margin-left:2%">Logout</button>
+  
+  
+    
+  <table>
+  
+  <td> <div class="part1"><app-epic></app-epic></div></td>
+  <td> <div class="part2"><app-story></app-story> </div></td>
+  <td> <div class="part3"><app-task></app-task> </div></td>
+  <div class="part4"></div>
+  
+  </table>
+  <button class="btn btn-secondary" (click)="adduser()"style="background-color:green;margin-left:auto;margin-right:auto;display:block;margin-top:2%;margin-bottom:0%;margin-left:2%">Add User</button>
+</div>
+
+<ng-template #loggedOut>
+  <div class="row col-sm-6" style="max-width:350px;">
+    <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" name="username" [(ngModel)]="form.username" #username="ngModel"
+               required />
+        <div *ngIf="f.submitted && username.invalid">
+          <div *ngIf="username.errors.required">Username is required</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" name="password" [(ngModel)]="form.password" #password="ngModel"
+               required minlength="6" />
+        <div *ngIf="f.submitted && password.invalid">
+          <div *ngIf="password.errors.required">Password is required</div>
+          <div *ngIf="password.errors.minlength">Password must be at least 6 characters</div>
+        </div>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary">Login</button>
+        <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger">
+          Login failed: {{errorMessage}}
+        </div>
+      </div>
+    </form>
+    <hr />
+    <!--<p>Don't have an account?</p>  -->
+    <!--  <a href="signup" class="btn btn-success">Sign Up</a>  -->
+  </div>
+</ng-template>
+
+<div *ngIf="loggedOut">
+    <app-footerbasic></app-footerbasic>
+</div>
+
+
+<div *ngIf="isAdduser" class="nav-item">
+    <app-register></app-register>
+</div>
