--- a/TaskManager/src/main/webapp/TMAngular/src/app/navbar/navbar.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
     <div class="container">
         <ul class="nav navbar-nav" >
-            <li><a routerLink="" routerLinkActive="active">Home</a></li>
+            <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
             <li><a routerLink="/timelog" >Log</a></li>
             <li><a routerLink="/creation" >Creation</a></li>
             <li><a routerLink="/statistics" >Statistics</a></li>
