--- a/TaskManager/src/main/webapp/TMAngular/src/app/app.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/app.component.html
@@ -30,8 +30,12 @@
       </body>
 -->
 <app-navbar></app-navbar>
+<!--
+    
 
-<!--<div class="container">
+    
+    
+    <div class="container">
     <app-employees></app-employees>
 </div>-->
 
