--- a/TaskManager/src/main/webapp/TMAngular/src/app/login/login.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/login/login.component.html
@@ -1,3 +1,5 @@
-<p>
-  login works!
-</p>
+<div class="container">
+    <ul class="nav navbar-nav" >
+        <li><a routerLink="/menu" (click)="removeLogin()">login</a></li>
+    </ul>
+</div>
