--- a/TaskManager/src/main/webapp/TMAngular/src/app/app.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/app.component.html
@@ -1,35 +1,20 @@
-<!--
 <div>
 
     <table>
         <tr *ngIf="loggedOut">
-            Username: <input><br/>
-            Password: <input type="password"><br/>
-            <button (click)="loginUser()">Login</button>
+            Username: <input [(ngModel)]="emailId"><br/>
+            Password: <input type="password" [(ngModel)]="password"><br/>
+            <a (click)="loginUser()" routerLink="/home">Login</a>
         </tr>
         <tr  *ngIf="loggedIn">
             <td>
-                <app-headerbasic></app-headerbasic>
+                <app-navbar></app-navbar>
             </td>
-        </tr>
-        <tr  *ngIf="loggedIn">
-            <button (click)="logoutUser()">Logout</button>
-            <app-footerbasic></app-footerbasic>
         </tr>
     </table>
 </div>
 
 
-
-
-<body>
-        <div class="part1"><app-epic></app-epic></div>
-        <div class="part2"><app-story></app-story> </div>
-        <div class="part3"></div>
-        <div class="part4"></div>
-      </body>
--->
-<app-navbar></app-navbar>
 <!--
     
 
