--- a/TaskManager/src/main/webapp/TMAngular/src/app/profile/profile.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/profile/profile.component.html
@@ -3,3 +3,4 @@ Name : {{ employeeDetail.employeename }} <br/>
 Profile : {{ employeeDetail.employeeprofile.profilename }} <br/>
 Role : {{ employeeDetail.employeerole.rolename }} <br/>
 Initiative : {{ employeeDetail.employeeinitiative.initiativename }} <br/>
+<button (click)="logoutUser()" routerLink="">Logout</button>
