--- a/TaskManager/src/main/webapp/TMAngular/src/app/navbar/navbar.component.css
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/navbar/navbar.component.css
@@ -1,20 +1,26 @@
 * {box-sizing: border-box;}
 
+
 body { 
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  padding-top: 70px;
+  background-color: rgb(9, 51, 240);
+  padding: 100px;
 }
 
 .header {
   overflow: hidden;
-  background-color:blue;
+  background-color:rgb(217, 236, 243);
   padding: 20px 10px;
   width: 100%;
+  text-align: center;
+  color: black
 }
 
 .header a {
   float: left;
-  color: white;
+  color: rgb(241, 236, 236);
   text-align: center;
   padding: 12px;
   text-decoration: none;
@@ -34,7 +40,7 @@ body {
 }
 
 .header button.active {
-  background-color: dodgerblue;
+  background-color: rgb(7, 96, 185);
   color: white;
 }
 
