--- a/TaskManager/src/main/webapp/TMAngular/src/app/timelog/timelog.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/timelog/timelog.component.html
@@ -1,27 +1,66 @@
+<ngb-accordion #a="ngbAccordion" activeIds="custom-panel-1">
+    <ngb-panel id="custom-panel-1">
+      <ng-template ngbPanelHeader let-opened="opened">
+        <div class="d-flex align-items-center justify-content-between">
+          <h5 class="m-0">Tasks assigned</h5>
+          
+          <!------<button ngbPanelToggle class="btn btn-link p-0">&#9660;</button>----->
+          <button ngbPanelToggle class="btn btn-link p-1" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="arrow-down" onclick="this.classList.toggle('active')"></div>
+          </button>
+        </div>
+      </ng-template>
+      <ng-template ngbPanelContent>
+          <table class="table table-striped" border="2">
+              <thead>
+              <tr>
+                <th scope="col">Task Name</th>
+                <th scope="col">Task Status</th>
+                <th scope="col">Estimated Grand</th>       
+              </tr>
+              </thead>
+            
+              <tr *ngFor="let task of tasks">
+                <td>{{task.taskName}}</td>
+                <td>{{task.taskStatus}}</td>
+                <td>{{task.EstimatedGrand}</td> 
+              </tr>
+              
+            </table>
+            </ng-template>
+            </ngb-panel>
+            </ngb-accordion>
+            
 
-    Log Description: <input type="text" [(ngModel)]="logDescription"><br/>
-    Log Duration: <input type="number" [(ngModel)]="logDuration">Hrs<br/>
+<div class="solid">
+Log Description: <input type="text" [(ngModel)]="logDescription"><br/>
+Log Duration: <input type="number" [(ngModel)]="logDuration">Hrs<br/>
 
-    <p>Story</p>
-    <select [(ngModel)]="selectedStoryId" >
-        <option *ngFor="let story of stories" [(ngValue)]="story.storyId">{{story.storyName}}</option>
-    </select>
-    <p>Task</p>
-    <select [(ngModel)]="selectedTaskId">
-        <option *ngFor="let task of tasks" [(ngValue)]="task.taskId">{{task.taskName}}</option>
-    </select>
-    <br/>
-    <button (click)="timeLog()">Log Time</button><br/><br/>
+<p>Story</p>
+<select [(ngModel)]="selectedStoryId" >
+    <option *ngFor="let story of stories" [(ngValue)]="story.storyId">{{story.storyName}}</option>
+</select>
+<p>Task</p>
+<select [(ngModel)]="selectedTaskId">
+    <option *ngFor="let task of tasks" [(ngValue)]="task.taskId">{{task.taskName}}</option>
+</select>
+<br/>
+<button (click)="timeLog()">Log Time</button><br/><br/>
+</div>
 
-    Issue Name: <input type="text" [(ngModel)]="issueName"><br/>
-    Issue Description: <input type="text" [(ngModel)]="issueDescription"><br/>
 
-    <p>Story</p>
-    <select [(ngModel)]="issueStoryId" >
-        <option *ngFor="let story of stories" [(ngValue)]="story.storyId">{{story.storyName}}</option>
-    </select><br/>
-    <p>Status</p>
-    <select [(ngModel)]="issueStatusId">
-        <option *ngFor="let status of statusList" [(ngValue)]="status.statusId">{{status.statusName}}</option>
-    </select><br/>
-    <button (click)="issueLog()">Log Issue</button>
+<div class="solid">
+Issue Name: <input type="text" [(ngModel)]="issueName"><br/>
+Issue Description: <input type="text" [(ngModel)]="issueDescription"><br/>
+
+<p>Story</p>
+<select [(ngModel)]="issueStoryId" >
+    <option *ngFor="let story of stories" [(ngValue)]="story.storyId">{{story.storyName}}</option>
+</select><br/>
+<p>Status</p>
+<select [(ngModel)]="issueStatusId">
+    <option *ngFor="let status of statusList" [(ngValue)]="status.statusId">{{status.statusName}}</option>
+</select><br/>
+<button (click)="issueLog()">Log Issue</button>
+</div>
+
