Epic_Story_Task_html files
Co-Authored-By: sunny-221430 <sunny-221430@users.noreply.github.com>
Co-Authored-By: nivedithabr <nivedithabr@users.noreply.github.com>
Co-Authored-By: Manzil Chakraborti <manzil94@users.noreply.github.com>
Co-Authored-By: Mubeen <mubeen777@users.noreply.github.com>
Co-Authored-By: MAITREYEE DINGARE <maitreyeedinagre@users.noreply.github.com>
Co-Authored-By: kaustavdutta1989 <kaustavdutta1989@users.noreply.github.com>

--- a/TaskManager/src/main/webapp/TMAngular/src/app/commonview/epic/epic.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/commonview/epic/epic.component.html
@@ -3,7 +3,10 @@
     <ng-template ngbPanelHeader let-opened="opened">
       <div class="d-flex align-items-center justify-content-between">
         <h5 class="m-0">Epic</h5>
-        <button ngbPanelToggle class="btn btn-link p-0">&#9660;</button>
+        <!------button ngbPanelToggle class="btn btn-link p-0">&#9660;</button>--->
+        <button ngbPanelToggle class="btn btn-link p-1" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <div class="arrow-down" onclick="this.classList.toggle('active')"></div>
+        </button>
       </div>
     </ng-template>
     <ng-template ngbPanelContent>
