--- a/TaskManager/src/main/webapp/TMAngular/src/app/navbar/navbar.component.css
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/navbar/navbar.component.css
@@ -11,11 +11,11 @@ body {
 
 .header {
   overflow: hidden;
-  background-color:rgb(217, 236, 243);
+  background-color:rgb(58, 142, 238);
   padding: 20px 10px;
   width: 100%;
   text-align: center;
-  color: black
+  color: rgb(14, 12, 12)
 }
 
 .header a {
@@ -41,7 +41,7 @@ body {
 
 .header button.active {
   background-color: rgb(7, 96, 185);
-  color: white;
+  color: rgb(51, 72, 190);
 }
 
 .header-right {
