--- a/TaskManager/src/main/webapp/TMAngular/src/app/navbar/navbar.component.html
+++ b/TaskManager/src/main/webapp/TMAngular/src/app/navbar/navbar.component.html
@@ -32,10 +32,12 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         
-        <a class="navbar-brand" href="#" routerLink="/creation" >Creation</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <div *ngIf="isManager">
+            <a class="navbar-brand" href="#" routerLink="/creation" >Creation</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
         
         <a class="navbar-brand" href="#" routerLink="/statistics" >Statistics</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
